deploy: 78dabd9e858275becb3311aa204a35526c8c749a

--- a/PhxLocalizedRoutes.Exceptions.MissingLocaleAssignError.html
+++ b/PhxLocalizedRoutes.Exceptions.MissingLocaleAssignError.html
@@ -10,7 +10,7 @@
     <title>PhxLocalizedRoutes.Exceptions.MissingLocaleAssignError — Phoenix Localized Routes v0.1.0</title>
     <link rel="stylesheet" href="dist/elixir-b6f1ed5df9b1d42a7309.css" />
 
-    <script src="dist/sidebar_items-221ae6dcef.js"></script>
+    <script src="dist/sidebar_items-c00ab84c14.js"></script>
 
       <script src="docs_config.js"></script>
 
@@ -94,7 +94,7 @@ Phoenix Localized Routes
 </button>
 
 
-    <a href="https://github.com/BartOtten/phx_loc_routes/blob/v0.0.1-dev/lib/localized_routes/exceptions.ex#L28" title="View Source" class="view-source" rel="help">
+    <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes/exceptions.ex#L28" title="View Source" class="view-source" rel="help">
       <i class="ri-code-s-slash-line" aria-hidden="true"></i>
       <span class="sr-only">View Source</span>
     </a>
@@ -107,17 +107,33 @@ Phoenix Localized Routes
 
   <section id="moduledoc">
 <p>Raised when gettext_module is set in the configuration but
-:locale is not set in the assigns.</p><pre><code class="makeup elixir" translate="no"><span class="p" data-group-id="6580978515-1">%{</span><span class="w">
-  </span><span class="ss">scopes</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="6580978515-2">%{</span><span class="w">
-    </span><span class="s">&quot;/&quot;</span><span class="w">       </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="6580978515-3">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="6580978515-4">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="6580978515-4">}</span><span class="p" data-group-id="6580978515-3">}</span><span class="p">,</span><span class="w"> </span><span class="c1"># missing :locale</span><span class="w">
-    </span><span class="s">&quot;/other&quot;</span><span class="w">  </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="6580978515-5">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="6580978515-6">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="6580978515-6">}</span><span class="p" data-group-id="6580978515-5">}</span><span class="p" data-group-id="6580978515-2">}</span><span class="p">,</span><span class="w">
+:locale is not set in the assigns.</p><pre><code class="makeup elixir" translate="no"><span class="p" data-group-id="3728170939-1">%{</span><span class="w">
+  </span><span class="ss">scopes</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="3728170939-2">%{</span><span class="w">
+    </span><span class="s">&quot;/&quot;</span><span class="w">       </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="3728170939-3">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="3728170939-4">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="3728170939-4">}</span><span class="p" data-group-id="3728170939-3">}</span><span class="p">,</span><span class="w"> </span><span class="c1"># missing :locale</span><span class="w">
+    </span><span class="s">&quot;/other&quot;</span><span class="w">  </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="3728170939-5">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="3728170939-6">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="3728170939-6">}</span><span class="p" data-group-id="3728170939-5">}</span><span class="p" data-group-id="3728170939-2">}</span><span class="p">,</span><span class="w">
   </span><span class="ss">gettext_module</span><span class="p">:</span><span class="w"> </span><span class="nc">MyGettext</span><span class="w">
-</span><span class="p" data-group-id="6580978515-1">}</span></code></pre>
+</span><span class="p" data-group-id="3728170939-1">}</span></code></pre>
   </section>
 
 
 
       <footer class="footer">
+
+          <p>
+            On Hex.pm:
+
+            <span class="line">
+              <a href="https://hex.pm/packages/phoenix_localized_routes/0.1.0" class="line footer-hex-package">Package</a>
+              <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0" class="line">Preview</a>
+
+                <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0/show/lib/localized_routes/exceptions.ex">(current file)</a>
+
+            </span>
+
+            <button class="line footer-button display-quick-switch">
+              Search
+            </button>
+          </p>
 
         <p>
           Built using
