--- a/PhxLocalizedRoutes.Plug.html
+++ b/PhxLocalizedRoutes.Plug.html
@@ -10,7 +10,7 @@
     <title>PhxLocalizedRoutes.Plug — Phoenix Localized Routes v0.1.0</title>
     <link rel="stylesheet" href="dist/elixir-b6f1ed5df9b1d42a7309.css" />
 
-    <script src="dist/sidebar_items-221ae6dcef.js"></script>
+    <script src="dist/sidebar_items-c00ab84c14.js"></script>
 
       <script src="docs_config.js"></script>
 
@@ -94,7 +94,7 @@ Phoenix Localized Routes
 </button>
 
 
-    <a href="https://github.com/BartOtten/phx_loc_routes/blob/v0.0.1-dev/lib/localized_routes/plug.ex#L1" title="View Source" class="view-source" rel="help">
+    <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes/plug.ex#L1" title="View Source" class="view-source" rel="help">
       <i class="ri-code-s-slash-line" aria-hidden="true"></i>
       <span class="sr-only">View Source</span>
     </a>
@@ -120,6 +120,22 @@ get the current scope assigns.</p><h3 id="module-usage" class="section-heading">
 
 
       <footer class="footer">
+
+          <p>
+            On Hex.pm:
+
+            <span class="line">
+              <a href="https://hex.pm/packages/phoenix_localized_routes/0.1.0" class="line footer-hex-package">Package</a>
+              <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0" class="line">Preview</a>
+
+                <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0/show/lib/localized_routes/plug.ex">(current file)</a>
+
+            </span>
+
+            <button class="line footer-button display-quick-switch">
+              Search
+            </button>
+          </p>
 
         <p>
           Built using
