--- a/PhxLocalizedRoutes.html
+++ b/PhxLocalizedRoutes.html
@@ -10,7 +10,7 @@
     <title>PhxLocalizedRoutes — Phoenix Localized Routes v0.1.0</title>
     <link rel="stylesheet" href="dist/elixir-b6f1ed5df9b1d42a7309.css" />
 
-    <script src="dist/sidebar_items-221ae6dcef.js"></script>
+    <script src="dist/sidebar_items-c00ab84c14.js"></script>
 
       <script src="docs_config.js"></script>
 
@@ -94,7 +94,7 @@ Phoenix Localized Routes
 </button>
 
 
-    <a href="https://github.com/BartOtten/phx_loc_routes/blob/v0.0.1-dev/lib/localized_routes.ex#L58" title="View Source" class="view-source" rel="help">
+    <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L56" title="View Source" class="view-source" rel="help">
       <i class="ri-code-s-slash-line" aria-hidden="true"></i>
       <span class="sr-only">View Source</span>
     </a>
@@ -250,7 +250,7 @@ Types
     </a>
     <h1 class="signature" translate="no">opts()</h1>
 
-      <a href="https://github.com/BartOtten/phx_loc_routes/blob/v0.0.1-dev/lib/localized_routes.ex#L78" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L76" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -278,7 +278,7 @@ Types
     </a>
     <h1 class="signature" translate="no">scope_map()</h1>
 
-      <a href="https://github.com/BartOtten/phx_loc_routes/blob/v0.0.1-dev/lib/localized_routes.ex#L71" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L69" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -309,7 +309,7 @@ Types
     </a>
     <h1 class="signature" translate="no">scopes()</h1>
 
-      <a href="https://github.com/BartOtten/phx_loc_routes/blob/v0.0.1-dev/lib/localized_routes.ex#L77" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L75" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -337,7 +337,7 @@ Types
     </a>
     <h1 class="signature" translate="no">scopes_map()</h1>
 
-      <a href="https://github.com/BartOtten/phx_loc_routes/blob/v0.0.1-dev/lib/localized_routes.ex#L75" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L73" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -365,7 +365,7 @@ Types
     </a>
     <h1 class="signature" translate="no">scopes_nested()</h1>
 
-      <a href="https://github.com/BartOtten/phx_loc_routes/blob/v0.0.1-dev/lib/localized_routes.ex#L76" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L74" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -377,7 +377,7 @@ Types
 
       <div class="specs">
 
-          <pre translate="no"><span class="attribute">@type</span> scopes_nested() :: %{required(<a href="https://hexdocs.pm/elixir/typespecs.html#built-in-types">binary</a>()) =&gt; PhxLocalizedRoutes.Scope.Nested.t()}</pre>
+          <pre translate="no"><span class="attribute">@type</span> scopes_nested() :: %{required(<a href="https://hexdocs.pm/elixir/typespecs.html#built-in-types">binary</a>()) =&gt; <a href="PhxLocalizedRoutes.Scope.Nested.html#t:t/0">PhxLocalizedRoutes.Scope.Nested.t</a>()}</pre>
 
       </div>
 
@@ -406,7 +406,7 @@ Callbacks
     </a>
     <h1 class="signature" translate="no">assigned_values(key_or_keys)</h1>
 
-      <a href="https://github.com/BartOtten/phx_loc_routes/blob/v0.0.1-dev/lib/localized_routes.ex#L104" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L102" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -423,11 +423,11 @@ Callbacks
       </div>
 
 <p>Return a list of unique values assigned to given key. Returns a list of tuples
-with unique combinations when a list of keys is given.</p><p><strong>Example</strong></p><pre><code class="makeup elixir" translate="no"><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="0648780136-1">(</span><span class="ss">:locale</span><span class="p" data-group-id="0648780136-1">)</span><span class="w">
-</span><span class="p" data-group-id="0648780136-2">[</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl&quot;</span><span class="p" data-group-id="0648780136-2">]</span><span class="w">
+with unique combinations when a list of keys is given.</p><p><strong>Example</strong></p><pre><code class="makeup elixir" translate="no"><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="7242033716-1">(</span><span class="ss">:locale</span><span class="p" data-group-id="7242033716-1">)</span><span class="w">
+</span><span class="p" data-group-id="7242033716-2">[</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl&quot;</span><span class="p" data-group-id="7242033716-2">]</span><span class="w">
 
-</span><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="0648780136-3">(</span><span class="p" data-group-id="0648780136-4">[</span><span class="ss">:locale</span><span class="p">,</span><span class="w"> </span><span class="ss">:locale</span><span class="p" data-group-id="0648780136-4">]</span><span class="p" data-group-id="0648780136-3">)</span><span class="w">
-</span><span class="p" data-group-id="0648780136-5">[</span><span class="p" data-group-id="0648780136-6">{</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;en-GB&quot;</span><span class="p" data-group-id="0648780136-6">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="0648780136-7">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl-NL&quot;</span><span class="p" data-group-id="0648780136-7">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="0648780136-8">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl_BE&quot;</span><span class="p" data-group-id="0648780136-8">}</span><span class="p" data-group-id="0648780136-5">]</span></code></pre>
+</span><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="7242033716-3">(</span><span class="p" data-group-id="7242033716-4">[</span><span class="ss">:locale</span><span class="p">,</span><span class="w"> </span><span class="ss">:locale</span><span class="p" data-group-id="7242033716-4">]</span><span class="p" data-group-id="7242033716-3">)</span><span class="w">
+</span><span class="p" data-group-id="7242033716-5">[</span><span class="p" data-group-id="7242033716-6">{</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;en-GB&quot;</span><span class="p" data-group-id="7242033716-6">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="7242033716-7">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl-NL&quot;</span><span class="p" data-group-id="7242033716-7">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="7242033716-8">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl_BE&quot;</span><span class="p" data-group-id="7242033716-8">}</span><span class="p" data-group-id="7242033716-5">]</span></code></pre>
   </section>
 </section>
 <section class="detail" id="c:config/0">
@@ -439,7 +439,7 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
     </a>
     <h1 class="signature" translate="no">config()</h1>
 
-      <a href="https://github.com/BartOtten/phx_loc_routes/blob/v0.0.1-dev/lib/localized_routes.ex#L107" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L105" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -467,7 +467,7 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
     </a>
     <h1 class="signature" translate="no">get_scope(scope_helper)</h1>
 
-      <a href="https://github.com/BartOtten/phx_loc_routes/blob/v0.0.1-dev/lib/localized_routes.ex#L91" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L89" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -495,7 +495,7 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
     </a>
     <h1 class="signature" translate="no">scopes()</h1>
 
-      <a href="https://github.com/BartOtten/phx_loc_routes/blob/v0.0.1-dev/lib/localized_routes.ex#L85" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L83" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -523,7 +523,7 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
     </a>
     <h1 class="signature" translate="no">scopes_nested()</h1>
 
-      <a href="https://github.com/BartOtten/phx_loc_routes/blob/v0.0.1-dev/lib/localized_routes.ex#L88" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L86" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -547,6 +547,22 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
   </section>
 
       <footer class="footer">
+
+          <p>
+            On Hex.pm:
+
+            <span class="line">
+              <a href="https://hex.pm/packages/phoenix_localized_routes/0.1.0" class="line footer-hex-package">Package</a>
+              <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0" class="line">Preview</a>
+
+                <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0/show/lib/localized_routes.ex">(current file)</a>
+
+            </span>
+
+            <button class="line footer-button display-quick-switch">
+              Search
+            </button>
+          </p>
 
         <p>
           Built using
