--- a/api-reference.html
+++ b/api-reference.html
@@ -10,7 +10,7 @@
     <title>API Reference — Phoenix Localized Routes v0.1.0</title>
     <link rel="stylesheet" href="dist/elixir-b6f1ed5df9b1d42a7309.css" />
 
-    <script src="dist/sidebar_items-221ae6dcef.js"></script>
+    <script src="dist/sidebar_items-c00ab84c14.js"></script>
 
       <script src="docs_config.js"></script>
 
@@ -212,6 +212,15 @@ which can be used in Controllers and (Live)Views.</p></div>
     <div class="summary-synopsis"><p>Struct for flattened scopes</p></div>
 
 </div>
+<div class="summary-row">
+  <div class="summary-signature">
+    <a href="PhxLocalizedRoutes.Scope.Nested.html" translate="no">PhxLocalizedRoutes.Scope.Nested</a>
+
+  </div>
+
+    <div class="summary-synopsis"><p>Struct for scopes with nested scopes</p></div>
+
+</div>
 
     </div>
   </section>
@@ -236,6 +245,20 @@ README
 </div>
 
       <footer class="footer">
+
+          <p>
+            On Hex.pm:
+
+            <span class="line">
+              <a href="https://hex.pm/packages/phoenix_localized_routes/0.1.0" class="line footer-hex-package">Package</a>
+              <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0" class="line">Preview</a>
+
+            </span>
+
+            <button class="line footer-button display-quick-switch">
+              Search
+            </button>
+          </p>
 
         <p>
           Built using
