deploy: 514149aaa1c0f5c63128033e6eb29ae27575766a

--- a/PhxLocalizedRoutes.Exceptions.AssignsMismatchError.html
+++ b/PhxLocalizedRoutes.Exceptions.AssignsMismatchError.html
@@ -106,12 +106,12 @@ Phoenix Localized Routes
 
 
   <section id="moduledoc">
-<p>Raised when the custom assigns of scopes do not have the same keys.</p><pre><code class="makeup elixir" translate="no"><span class="p" data-group-id="3162388662-1">%{</span><span class="w">
-  </span><span class="ss">scopes</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="3162388662-2">%{</span><span class="w">
-    </span><span class="s">&quot;/&quot;</span><span class="w">      </span><span class="p">=&gt;</span><span class="w"> </span><span class="p" data-group-id="3162388662-3">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="3162388662-4">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w"> </span><span class="ss">key2</span><span class="p">:</span><span class="w"> </span><span class="mi">2</span><span class="p" data-group-id="3162388662-4">}</span><span class="p" data-group-id="3162388662-3">}</span><span class="p">,</span><span class="w">
-    </span><span class="s">&quot;/other&quot;</span><span class="w"> </span><span class="p">=&gt;</span><span class="w"> </span><span class="p" data-group-id="3162388662-5">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="3162388662-6">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="3162388662-6">}</span><span class="p" data-group-id="3162388662-5">}</span><span class="w"> </span><span class="c1"># missing :key2</span><span class="w">
-  </span><span class="p" data-group-id="3162388662-2">}</span><span class="w">
-</span><span class="p" data-group-id="3162388662-1">}</span></code></pre>
+<p>Raised when the custom assigns of scopes do not have the same keys.</p><pre><code class="makeup elixir" translate="no"><span class="p" data-group-id="4600870171-1">%{</span><span class="w">
+  </span><span class="ss">scopes</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="4600870171-2">%{</span><span class="w">
+    </span><span class="s">&quot;/&quot;</span><span class="w">      </span><span class="p">=&gt;</span><span class="w"> </span><span class="p" data-group-id="4600870171-3">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="4600870171-4">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w"> </span><span class="ss">key2</span><span class="p">:</span><span class="w"> </span><span class="mi">2</span><span class="p" data-group-id="4600870171-4">}</span><span class="p" data-group-id="4600870171-3">}</span><span class="p">,</span><span class="w">
+    </span><span class="s">&quot;/other&quot;</span><span class="w"> </span><span class="p">=&gt;</span><span class="w"> </span><span class="p" data-group-id="4600870171-5">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="4600870171-6">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="4600870171-6">}</span><span class="p" data-group-id="4600870171-5">}</span><span class="w"> </span><span class="c1"># missing :key2</span><span class="w">
+  </span><span class="p" data-group-id="4600870171-2">}</span><span class="w">
+</span><span class="p" data-group-id="4600870171-1">}</span></code></pre>
   </section>
 
 
@@ -122,10 +122,10 @@ Phoenix Localized Routes
             On Hex.pm:
 
             <span class="line">
-              <a href="https://hex.pm/packages/phoenix_localized_routes/0.1.0" class="line footer-hex-package">Package</a>
-              <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0" class="line">Preview</a>
+              <a href="https://hex.pm/packages/Phoenix Localized Routes/0.1.0" class="line footer-hex-package">Package</a>
+              <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0" class="line">Preview</a>
 
-                <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0/show/lib/localized_routes/exceptions.ex">(current file)</a>
+                <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0/show/lib/localized_routes/exceptions.ex">(current file)</a>
 
             </span>
 
