--- a/PhxLocalizedRoutes.Scope.Nested.html
+++ b/PhxLocalizedRoutes.Scope.Nested.html
@@ -190,10 +190,10 @@ Types
             On Hex.pm:
 
             <span class="line">
-              <a href="https://hex.pm/packages/phoenix_localized_routes/0.1.0" class="line footer-hex-package">Package</a>
-              <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0" class="line">Preview</a>
+              <a href="https://hex.pm/packages/Phoenix Localized Routes/0.1.0" class="line footer-hex-package">Package</a>
+              <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0" class="line">Preview</a>
 
-                <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0/show/lib/localized_routes.ex">(current file)</a>
+                <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0/show/lib/localized_routes.ex">(current file)</a>
 
             </span>
 
