--- a/changelog.html
+++ b/changelog.html
@@ -133,10 +133,10 @@ Usage
             On Hex.pm:
 
             <span class="line">
-              <a href="https://hex.pm/packages/phoenix_localized_routes/0.1.0" class="line footer-hex-package">Package</a>
-              <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0" class="line">Preview</a>
+              <a href="https://hex.pm/packages/Phoenix Localized Routes/0.1.0" class="line footer-hex-package">Package</a>
+              <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0" class="line">Preview</a>
 
-                <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0/show/CHANGELOG.md">(current file)</a>
+                <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0/show/CHANGELOG.md">(current file)</a>
 
             </span>
 
