--- a/search.html
+++ b/search.html
@@ -106,8 +106,8 @@ Phoenix Localized Routes
             On Hex.pm:
 
             <span class="line">
-              <a href="https://hex.pm/packages/phoenix_localized_routes/0.1.0" class="line footer-hex-package">Package</a>
-              <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0" class="line">Preview</a>
+              <a href="https://hex.pm/packages/Phoenix Localized Routes/0.1.0" class="line footer-hex-package">Package</a>
+              <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0" class="line">Preview</a>
 
             </span>
 
