deploy: cfa2645026c83bb514d7ffba8ecc5ab43a8f604d

--- a/PhxLocalizedRoutes.Exceptions.MissingLocaleAssignError.html
+++ b/PhxLocalizedRoutes.Exceptions.MissingLocaleAssignError.html
@@ -107,12 +107,12 @@ Phoenix Localized Routes
 
   <section id="moduledoc">
 <p>Raised when gettext_module is set in the configuration but
-:locale is not set in the assigns.</p><pre><code class="makeup elixir" translate="no"><span class="p" data-group-id="0810969442-1">%{</span><span class="w">
-  </span><span class="ss">scopes</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="0810969442-2">%{</span><span class="w">
-    </span><span class="s">&quot;/&quot;</span><span class="w">       </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="0810969442-3">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="0810969442-4">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="0810969442-4">}</span><span class="p" data-group-id="0810969442-3">}</span><span class="p">,</span><span class="w"> </span><span class="c1"># missing :locale</span><span class="w">
-    </span><span class="s">&quot;/other&quot;</span><span class="w">  </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="0810969442-5">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="0810969442-6">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="0810969442-6">}</span><span class="p" data-group-id="0810969442-5">}</span><span class="p" data-group-id="0810969442-2">}</span><span class="p">,</span><span class="w">
+:locale is not set in the assigns.</p><pre><code class="makeup elixir" translate="no"><span class="p" data-group-id="6383537233-1">%{</span><span class="w">
+  </span><span class="ss">scopes</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="6383537233-2">%{</span><span class="w">
+    </span><span class="s">&quot;/&quot;</span><span class="w">       </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="6383537233-3">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="6383537233-4">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="6383537233-4">}</span><span class="p" data-group-id="6383537233-3">}</span><span class="p">,</span><span class="w"> </span><span class="c1"># missing :locale</span><span class="w">
+    </span><span class="s">&quot;/other&quot;</span><span class="w">  </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="6383537233-5">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="6383537233-6">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="6383537233-6">}</span><span class="p" data-group-id="6383537233-5">}</span><span class="p" data-group-id="6383537233-2">}</span><span class="p">,</span><span class="w">
   </span><span class="ss">gettext_module</span><span class="p">:</span><span class="w"> </span><span class="nc">MyGettext</span><span class="w">
-</span><span class="p" data-group-id="0810969442-1">}</span></code></pre>
+</span><span class="p" data-group-id="6383537233-1">}</span></code></pre>
   </section>
 
 
@@ -123,10 +123,10 @@ Phoenix Localized Routes
             On Hex.pm:
 
             <span class="line">
-              <a href="https://hex.pm/packages/Phoenix Localized Routes/0.1.0" class="line footer-hex-package">Package</a>
-              <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0" class="line">Preview</a>
+              <a href="https://hex.pm/packages/phoenix_localized_routes/0.1.0" class="line footer-hex-package">Package</a>
+              <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0" class="line">Preview</a>
 
-                <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0/show/lib/localized_routes/exceptions.ex">(current file)</a>
+                <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0/show/lib/localized_routes/exceptions.ex">(current file)</a>
 
             </span>
 
