--- a/PhxLocalizedRoutes.Exceptions.MissingRootSlugError.html
+++ b/PhxLocalizedRoutes.Exceptions.MissingRootSlugError.html
@@ -106,19 +106,19 @@ Phoenix Localized Routes
 
 
   <section id="moduledoc">
-<p>Raised when the scope map does not start with the root scope &quot;/&quot;.</p><pre><code class="makeup elixir" translate="no"><span class="p" data-group-id="1938465600-1">%{</span><span class="w">
-  </span><span class="ss">scopes</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="1938465600-2">%{</span><span class="w">
-    </span><span class="s">&quot;/first&quot;</span><span class="w">       </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="1938465600-3">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="1938465600-4">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="1938465600-4">}</span><span class="p" data-group-id="1938465600-3">}</span><span class="p">,</span><span class="w">
-    </span><span class="s">&quot;/other&quot;</span><span class="w">  </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="1938465600-5">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="1938465600-6">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="1938465600-6">}</span><span class="p" data-group-id="1938465600-5">}</span><span class="p" data-group-id="1938465600-2">}</span><span class="p">,</span><span class="w">
-</span><span class="p" data-group-id="1938465600-1">}</span></code></pre><p>To fix this, include a scope for the root &quot;/&quot;.</p><pre><code class="makeup elixir" translate="no"><span class="err">`</span><span class="p" data-group-id="0359956452-1">%{</span><span class="w">
-  </span><span class="ss">scopes</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="0359956452-2">%{</span><span class="w">
-    </span><span class="s">&quot;/&quot;</span><span class="w"> </span><span class="p">=&gt;</span><span class="w"> </span><span class="p" data-group-id="0359956452-3">%{</span><span class="w">
-    </span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="0359956452-4">%{</span><span class="ss">level</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="0359956452-4">}</span><span class="w">
+<p>Raised when the scope map does not start with the root scope &quot;/&quot;.</p><pre><code class="makeup elixir" translate="no"><span class="p" data-group-id="4845799390-1">%{</span><span class="w">
+  </span><span class="ss">scopes</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="4845799390-2">%{</span><span class="w">
+    </span><span class="s">&quot;/first&quot;</span><span class="w">       </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="4845799390-3">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="4845799390-4">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="4845799390-4">}</span><span class="p" data-group-id="4845799390-3">}</span><span class="p">,</span><span class="w">
+    </span><span class="s">&quot;/other&quot;</span><span class="w">  </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="4845799390-5">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="4845799390-6">%{</span><span class="ss">key1</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="4845799390-6">}</span><span class="p" data-group-id="4845799390-5">}</span><span class="p" data-group-id="4845799390-2">}</span><span class="p">,</span><span class="w">
+</span><span class="p" data-group-id="4845799390-1">}</span></code></pre><p>To fix this, include a scope for the root &quot;/&quot;.</p><pre><code class="makeup elixir" translate="no"><span class="err">`</span><span class="p" data-group-id="0786016206-1">%{</span><span class="w">
+  </span><span class="ss">scopes</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="0786016206-2">%{</span><span class="w">
+    </span><span class="s">&quot;/&quot;</span><span class="w"> </span><span class="p">=&gt;</span><span class="w"> </span><span class="p" data-group-id="0786016206-3">%{</span><span class="w">
+    </span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="0786016206-4">%{</span><span class="ss">level</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p" data-group-id="0786016206-4">}</span><span class="w">
     </span><span class="ss">scopes</span><span class="p">:</span><span class="w">
-      </span><span class="s">&quot;/first&quot;</span><span class="w">       </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="0359956452-5">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="0359956452-6">%{</span><span class="ss">level</span><span class="p">:</span><span class="w"> </span><span class="mi">2</span><span class="p" data-group-id="0359956452-6">}</span><span class="p" data-group-id="0359956452-5">}</span><span class="p">,</span><span class="w">
-      </span><span class="s">&quot;/other&quot;</span><span class="w">  </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="0359956452-7">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="0359956452-8">%{</span><span class="ss">level</span><span class="p">:</span><span class="w"> </span><span class="mi">2</span><span class="p" data-group-id="0359956452-8">}</span><span class="p" data-group-id="0359956452-7">}</span><span class="p" data-group-id="0359956452-3">}</span><span class="p">,</span><span class="w">
-   </span><span class="p" data-group-id="0359956452-2">}</span><span class="w">
-</span><span class="p" data-group-id="0359956452-1">}</span></code></pre>
+      </span><span class="s">&quot;/first&quot;</span><span class="w">       </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="0786016206-5">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="0786016206-6">%{</span><span class="ss">level</span><span class="p">:</span><span class="w"> </span><span class="mi">2</span><span class="p" data-group-id="0786016206-6">}</span><span class="p" data-group-id="0786016206-5">}</span><span class="p">,</span><span class="w">
+      </span><span class="s">&quot;/other&quot;</span><span class="w">  </span><span class="p">=&gt;</span><span class="w">    </span><span class="p" data-group-id="0786016206-7">%{</span><span class="ss">assigns</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="0786016206-8">%{</span><span class="ss">level</span><span class="p">:</span><span class="w"> </span><span class="mi">2</span><span class="p" data-group-id="0786016206-8">}</span><span class="p" data-group-id="0786016206-7">}</span><span class="p" data-group-id="0786016206-3">}</span><span class="p">,</span><span class="w">
+   </span><span class="p" data-group-id="0786016206-2">}</span><span class="w">
+</span><span class="p" data-group-id="0786016206-1">}</span></code></pre>
   </section>
 
 
@@ -129,10 +129,10 @@ Phoenix Localized Routes
             On Hex.pm:
 
             <span class="line">
-              <a href="https://hex.pm/packages/Phoenix Localized Routes/0.1.0" class="line footer-hex-package">Package</a>
-              <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0" class="line">Preview</a>
+              <a href="https://hex.pm/packages/phoenix_localized_routes/0.1.0" class="line footer-hex-package">Package</a>
+              <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0" class="line">Preview</a>
 
-                <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0/show/lib/localized_routes/exceptions.ex">(current file)</a>
+                <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0/show/lib/localized_routes/exceptions.ex">(current file)</a>
 
             </span>
 
