--- a/PhxLocalizedRoutes.LiveHelpers.html
+++ b/PhxLocalizedRoutes.LiveHelpers.html
@@ -188,10 +188,10 @@ configuration module is passed as the first argument.</p><p>The assigns can used
             On Hex.pm:
 
             <span class="line">
-              <a href="https://hex.pm/packages/Phoenix Localized Routes/0.1.0" class="line footer-hex-package">Package</a>
-              <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0" class="line">Preview</a>
+              <a href="https://hex.pm/packages/phoenix_localized_routes/0.1.0" class="line footer-hex-package">Package</a>
+              <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0" class="line">Preview</a>
 
-                <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0/show/lib/localized_routes/live_helpers.ex">(current file)</a>
+                <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0/show/lib/localized_routes/live_helpers.ex">(current file)</a>
 
             </span>
 
