--- a/PhxLocalizedRoutes.Plug.html
+++ b/PhxLocalizedRoutes.Plug.html
@@ -125,10 +125,10 @@ get the current scope assigns.</p><h3 id="module-usage" class="section-heading">
             On Hex.pm:
 
             <span class="line">
-              <a href="https://hex.pm/packages/Phoenix Localized Routes/0.1.0" class="line footer-hex-package">Package</a>
-              <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0" class="line">Preview</a>
+              <a href="https://hex.pm/packages/phoenix_localized_routes/0.1.0" class="line footer-hex-package">Package</a>
+              <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0" class="line">Preview</a>
 
-                <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0/show/lib/localized_routes/plug.ex">(current file)</a>
+                <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0/show/lib/localized_routes/plug.ex">(current file)</a>
 
             </span>
 
