--- a/PhxLocalizedRoutes.html
+++ b/PhxLocalizedRoutes.html
@@ -423,11 +423,11 @@ Callbacks
       </div>
 
 <p>Return a list of unique values assigned to given key. Returns a list of tuples
-with unique combinations when a list of keys is given.</p><p><strong>Example</strong></p><pre><code class="makeup elixir" translate="no"><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="6521791064-1">(</span><span class="ss">:locale</span><span class="p" data-group-id="6521791064-1">)</span><span class="w">
-</span><span class="p" data-group-id="6521791064-2">[</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl&quot;</span><span class="p" data-group-id="6521791064-2">]</span><span class="w">
+with unique combinations when a list of keys is given.</p><p><strong>Example</strong></p><pre><code class="makeup elixir" translate="no"><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="5681598249-1">(</span><span class="ss">:locale</span><span class="p" data-group-id="5681598249-1">)</span><span class="w">
+</span><span class="p" data-group-id="5681598249-2">[</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl&quot;</span><span class="p" data-group-id="5681598249-2">]</span><span class="w">
 
-</span><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="6521791064-3">(</span><span class="p" data-group-id="6521791064-4">[</span><span class="ss">:locale</span><span class="p">,</span><span class="w"> </span><span class="ss">:locale</span><span class="p" data-group-id="6521791064-4">]</span><span class="p" data-group-id="6521791064-3">)</span><span class="w">
-</span><span class="p" data-group-id="6521791064-5">[</span><span class="p" data-group-id="6521791064-6">{</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;en-GB&quot;</span><span class="p" data-group-id="6521791064-6">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="6521791064-7">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl-NL&quot;</span><span class="p" data-group-id="6521791064-7">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="6521791064-8">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl_BE&quot;</span><span class="p" data-group-id="6521791064-8">}</span><span class="p" data-group-id="6521791064-5">]</span></code></pre>
+</span><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="5681598249-3">(</span><span class="p" data-group-id="5681598249-4">[</span><span class="ss">:locale</span><span class="p">,</span><span class="w"> </span><span class="ss">:locale</span><span class="p" data-group-id="5681598249-4">]</span><span class="p" data-group-id="5681598249-3">)</span><span class="w">
+</span><span class="p" data-group-id="5681598249-5">[</span><span class="p" data-group-id="5681598249-6">{</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;en-GB&quot;</span><span class="p" data-group-id="5681598249-6">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="5681598249-7">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl-NL&quot;</span><span class="p" data-group-id="5681598249-7">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="5681598249-8">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl_BE&quot;</span><span class="p" data-group-id="5681598249-8">}</span><span class="p" data-group-id="5681598249-5">]</span></code></pre>
   </section>
 </section>
 <section class="detail" id="c:config/0">
@@ -552,10 +552,10 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
             On Hex.pm:
 
             <span class="line">
-              <a href="https://hex.pm/packages/Phoenix Localized Routes/0.1.0" class="line footer-hex-package">Package</a>
-              <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0" class="line">Preview</a>
+              <a href="https://hex.pm/packages/phoenix_localized_routes/0.1.0" class="line footer-hex-package">Package</a>
+              <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0" class="line">Preview</a>
 
-                <a href="https://preview.hex.pm/preview/Phoenix Localized Routes/0.1.0/show/lib/localized_routes.ex">(current file)</a>
+                <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0/show/lib/localized_routes.ex">(current file)</a>
 
             </span>
 
