deploy: 3b2516579120a7fcde69fb327d8a889e9b73110a

--- a/readme.html
+++ b/readme.html
@@ -10,7 +10,7 @@
     <title>README — Phoenix Localized Routes v0.1.0</title>
     <link rel="stylesheet" href="dist/elixir-b6f1ed5df9b1d42a7309.css" />
 
-    <script src="dist/sidebar_items-c00ab84c14.js"></script>
+    <script src="dist/sidebar_items-6f43a36c6b.js"></script>
 
       <script src="docs_config.js"></script>
 
@@ -114,13 +114,13 @@ user engagement and content relevance.</p><pre><code class="makeup elixir" trans
   Features and Benefits
 </h2>
 <ul><li>[x]  URL matches language of content which can enhance user engagement and content
-relevance.</li><li>[x]  Works with Phoenix View and Phoenix LiveView</li><li>[x]  Unlimited nesting</li><li>[x]  Supports dynamic nesting (eg. <code class="inline">/{continent}/{county}/{page}</code> <em>and</em> <code class="inline">/{country}/{page}</code>)</li><li>[x]  Less boilerplate in your <code class="inline">routes.ex</code></li><li>[x]  Generates routes at compile time; no performance penalty!</li><li>[x]  Easily add custom assigns to your (localized) routes</li><li>[x]  Easily generate links to matching pages in other locales</li><li>[x]  Can be used for non-locale alternate routing (eg. <code class="inline">/{sport}/{activity}</code>)</li></ul><h2 id="status" class="section-heading">
-  <a href="#status" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
-  <p class="sr-only">status</p>
+relevance.</li><li>[x]  Works with Phoenix View and Phoenix LiveView</li><li>[x]  Unlimited nesting</li><li>[x]  Supports dynamic nesting (eg. <code class="inline">/{continent}/{county}/{page}</code> <em>and</em> <code class="inline">/{country}/{page}</code>)</li><li>[x]  Less boilerplate in your <code class="inline">routes.ex</code></li><li>[x]  Generates routes at compile time; no performance penalty!</li><li>[x]  Easily add custom assigns to your (localized) routes</li><li>[x]  Easily generate links to matching pages in other locales</li><li>[x]  Can be used for non-locale alternate routing (eg. <code class="inline">/{sport}/{activity}</code>)</li></ul><h2 id="documentation" class="section-heading">
+  <a href="#documentation" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
+  <p class="sr-only">documentation</p>
   </a>
-  Status
+  Documentation
 </h2>
-<p>This lib will soon be published on Hex. In the meantime the documentation can be found at <a href="https://bartotten.github.io/phoenix_localized_routes/">Github Pages</a></p><h2 id="usage-summary" class="section-heading">
+<p>Documentation can be found at <a href="https://hexdocs.pm/phoenix_localized_routes/">HexDocs</a></p><h2 id="usage-summary" class="section-heading">
   <a href="#usage-summary" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">usage-summary</p>
   </a>
@@ -152,11 +152,11 @@ relevance.</li><li>[x]  Works with Phoenix View and Phoenix LiveView</li><li>[x]
   </a>
   Installation
 </h2>
-<p>You can install this library by adding it to your list of dependencies in <code class="inline">mix.exs</code>:</p><pre><code class="makeup elixir" translate="no"><span class="kd">def</span><span class="w"> </span><span class="nf">deps</span><span class="w"> </span><span class="k" data-group-id="2016571885-1">do</span><span class="w">
-  </span><span class="p" data-group-id="2016571885-2">[</span><span class="w">
-    </span><span class="p" data-group-id="2016571885-3">{</span><span class="ss">:phoenix_localized_routes</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;~&gt; 0.1.0&quot;</span><span class="p" data-group-id="2016571885-3">}</span><span class="w">
-  </span><span class="p" data-group-id="2016571885-2">]</span><span class="w">
-</span><span class="k" data-group-id="2016571885-1">end</span></code></pre><p>To configure your routes have a look at the <a href="usage.html">Usage Guide</a>.</p><h2 id="technical-notes" class="section-heading">
+<p>You can install this library by adding it to your list of dependencies in <code class="inline">mix.exs</code>:</p><pre><code class="makeup elixir" translate="no"><span class="kd">def</span><span class="w"> </span><span class="nf">deps</span><span class="w"> </span><span class="k" data-group-id="1170263910-1">do</span><span class="w">
+  </span><span class="p" data-group-id="1170263910-2">[</span><span class="w">
+    </span><span class="p" data-group-id="1170263910-3">{</span><span class="ss">:phoenix_localized_routes</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;~&gt; 0.1.0&quot;</span><span class="p" data-group-id="1170263910-3">}</span><span class="w">
+  </span><span class="p" data-group-id="1170263910-2">]</span><span class="w">
+</span><span class="k" data-group-id="1170263910-1">end</span></code></pre><p>To configure your routes have a look at the <a href="usage.html">Usage Guide</a>.</p><h2 id="technical-notes" class="section-heading">
   <a href="#technical-notes" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">technical-notes</p>
   </a>
