deploy: 4f770cb14f2f933f5128e6e2e9c85ab22ef1f668

--- a/PhxLocalizedRoutes.Config.html
+++ b/PhxLocalizedRoutes.Config.html
@@ -211,7 +211,7 @@ Types
 
       <div class="specs">
 
-          <pre translate="no"><span class="attribute">@type</span> scopes() :: %{required(<a href="https://hexdocs.pm/elixir/typespecs.html#built-in-types">binary</a>()) =&gt; <a href="PhxLocalizedRoutes.Scope.Flat.html#t:t/0">PhxLocalizedRoutes.Scope.Flat.t</a>()}</pre>
+          <pre translate="no"><span class="attribute">@type</span> scopes() :: %{required(<a href="https://hexdocs.pm/elixir/typespecs.html#built-in-types">binary</a>() | nil) =&gt; <a href="PhxLocalizedRoutes.Scope.Flat.html#t:t/0">PhxLocalizedRoutes.Scope.Flat.t</a>()}</pre>
 
       </div>
 
