--- a/PhxLocalizedRoutes.html
+++ b/PhxLocalizedRoutes.html
@@ -423,11 +423,11 @@ Callbacks
       </div>
 
 <p>Return a list of unique values assigned to given key. Returns a list of tuples
-with unique combinations when a list of keys is given.</p><p><strong>Example</strong></p><pre><code class="makeup elixir" translate="no"><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="7651696555-1">(</span><span class="ss">:locale</span><span class="p" data-group-id="7651696555-1">)</span><span class="w">
-</span><span class="p" data-group-id="7651696555-2">[</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl&quot;</span><span class="p" data-group-id="7651696555-2">]</span><span class="w">
+with unique combinations when a list of keys is given.</p><p><strong>Example</strong></p><pre><code class="makeup elixir" translate="no"><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="8459070424-1">(</span><span class="ss">:locale</span><span class="p" data-group-id="8459070424-1">)</span><span class="w">
+</span><span class="p" data-group-id="8459070424-2">[</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl&quot;</span><span class="p" data-group-id="8459070424-2">]</span><span class="w">
 
-</span><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="7651696555-3">(</span><span class="p" data-group-id="7651696555-4">[</span><span class="ss">:locale</span><span class="p">,</span><span class="w"> </span><span class="ss">:locale</span><span class="p" data-group-id="7651696555-4">]</span><span class="p" data-group-id="7651696555-3">)</span><span class="w">
-</span><span class="p" data-group-id="7651696555-5">[</span><span class="p" data-group-id="7651696555-6">{</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;en-GB&quot;</span><span class="p" data-group-id="7651696555-6">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="7651696555-7">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl-NL&quot;</span><span class="p" data-group-id="7651696555-7">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="7651696555-8">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl_BE&quot;</span><span class="p" data-group-id="7651696555-8">}</span><span class="p" data-group-id="7651696555-5">]</span></code></pre>
+</span><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="8459070424-3">(</span><span class="p" data-group-id="8459070424-4">[</span><span class="ss">:locale</span><span class="p">,</span><span class="w"> </span><span class="ss">:locale</span><span class="p" data-group-id="8459070424-4">]</span><span class="p" data-group-id="8459070424-3">)</span><span class="w">
+</span><span class="p" data-group-id="8459070424-5">[</span><span class="p" data-group-id="8459070424-6">{</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;en-GB&quot;</span><span class="p" data-group-id="8459070424-6">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="8459070424-7">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl-NL&quot;</span><span class="p" data-group-id="8459070424-7">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="8459070424-8">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl_BE&quot;</span><span class="p" data-group-id="8459070424-8">}</span><span class="p" data-group-id="8459070424-5">]</span></code></pre>
   </section>
 </section>
 <section class="detail" id="c:config/0">
@@ -479,7 +479,7 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
 
       <div class="specs">
 
-          <pre translate="no"><span class="attribute">@callback</span> get_scope(scope_helper :: nil | <a href="https://hexdocs.pm/elixir/String.html#t:t/0">String.t</a>()) :: <a href="https://hexdocs.pm/elixir/typespecs.html#basic-types">map</a>()</pre>
+          <pre translate="no"><span class="attribute">@callback</span> get_scope(scope_helper :: nil | <a href="https://hexdocs.pm/elixir/String.html#t:t/0">String.t</a>()) :: <a href="PhxLocalizedRoutes.Scope.Flat.html#t:t/0">PhxLocalizedRoutes.Scope.Flat.t</a>()</pre>
 
       </div>
 
@@ -507,7 +507,7 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
 
       <div class="specs">
 
-          <pre translate="no"><span class="attribute">@callback</span> scopes() :: <a href="https://hexdocs.pm/elixir/typespecs.html#basic-types">map</a>()</pre>
+          <pre translate="no"><span class="attribute">@callback</span> scopes() :: <a href="#t:scopes/0">scopes</a>()</pre>
 
       </div>
 
@@ -535,7 +535,7 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
 
       <div class="specs">
 
-          <pre translate="no"><span class="attribute">@callback</span> scopes_nested() :: <a href="https://hexdocs.pm/elixir/typespecs.html#basic-types">map</a>()</pre>
+          <pre translate="no"><span class="attribute">@callback</span> scopes_nested() :: <a href="#t:scopes_nested/0">scopes_nested</a>()</pre>
 
       </div>
 
