deploy: c49d74161f9375fb66ed1009f54e0c44dab21d0f

--- a/PhxLocalizedRoutes.Scope.Flat.html
+++ b/PhxLocalizedRoutes.Scope.Flat.html
@@ -106,7 +106,7 @@ Phoenix Localized Routes
 
 
   <section id="moduledoc">
-<p>Struct for flattened scopes</p>
+<p>Struct for flattened scope</p>
   </section>
 
 
