--- a/PhxLocalizedRoutes.Scope.Nested.html
+++ b/PhxLocalizedRoutes.Scope.Nested.html
@@ -106,7 +106,7 @@ Phoenix Localized Routes
 
 
   <section id="moduledoc">
-<p>Struct for scopes with nested scopes</p>
+<p>Struct for scope with optionally nested scopes</p>
   </section>
 
 
