--- a/api-reference.html
+++ b/api-reference.html
@@ -209,7 +209,7 @@ which can be used in Controllers and (Live)Views.</p></div>
 
   </div>
 
-    <div class="summary-synopsis"><p>Struct for flattened scopes</p></div>
+    <div class="summary-synopsis"><p>Struct for flattened scope</p></div>
 
 </div>
 <div class="summary-row">
@@ -218,7 +218,7 @@ which can be used in Controllers and (Live)Views.</p></div>
 
   </div>
 
-    <div class="summary-synopsis"><p>Struct for scopes with nested scopes</p></div>
+    <div class="summary-synopsis"><p>Struct for scope with optionally nested scopes</p></div>
 
 </div>
 
