--- a/api-reference.html
+++ b/api-reference.html
@@ -10,7 +10,7 @@
     <title>API Reference — Phoenix Localized Routes v0.1.0</title>
     <link rel="stylesheet" href="dist/elixir-b6f1ed5df9b1d42a7309.css" />
 
-    <script src="dist/sidebar_items-27762099be.js"></script>
+    <script src="dist/sidebar_items-48d2b52a43.js"></script>
 
       <script src="docs_config.js"></script>
 
@@ -113,10 +113,9 @@ Phoenix Localized Routes
 
   </div>
 
-    <div class="summary-synopsis"><p>Macro to create and validate <a href="PhxLocalizedRoutes.html#content"><code class="inline">PhxLocalizedRoutes</code></a> configuration module with
-convenience callbacks to fetch specific values. It also creates a LiveHelper
-module to be used in LiveView projects.  For maximum performance, most functions
-return values including additional data computed at compile time.</p></div>
+    <div class="summary-synopsis"><p>Macro to create and validate <a href="PhxLocalizedRoutes.html#content"><code class="inline">PhxLocalizedRoutes</code></a> configuration modules with
+convenience callbacks to fetch specific values. For maximum performance, most
+callbacks return precompiled values with precomputed additional data.</p></div>
 
 </div>
 <div class="summary-row">
