--- a/PhxLocalizedRoutes.LiveHelpers.html
+++ b/PhxLocalizedRoutes.LiveHelpers.html
@@ -10,7 +10,7 @@
     <title>PhxLocalizedRoutes.LiveHelpers — Phoenix Localized Routes v0.1.0</title>
     <link rel="stylesheet" href="dist/elixir-b6f1ed5df9b1d42a7309.css" />
 
-    <script src="dist/sidebar_items-27762099be.js"></script>
+    <script src="dist/sidebar_items-48d2b52a43.js"></script>
 
       <script src="docs_config.js"></script>
 
@@ -164,7 +164,7 @@ Functions
     </a>
     <h1 class="signature" translate="no">on_mount(conf, params, session, socket)</h1>
 
-      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes/live_helpers.ex#L24" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes/live_helpers.ex#L26" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -173,6 +173,17 @@ Functions
   </div>
 
   <section class="docstring">
+
+      <div class="specs">
+
+          <pre translate="no"><span class="attribute">@spec</span> on_mount(
+  <a href="PhxLocalizedRoutes.Config.html#t:t/0">PhxLocalizedRoutes.Config.t</a>(),
+  params :: <a href="https://hexdocs.pm/elixir/typespecs.html#basic-types">map</a>(),
+  session :: <a href="https://hexdocs.pm/elixir/typespecs.html#basic-types">map</a>(),
+  <a href="https://hexdocs.pm/phoenix_live_view/0.17.7/Phoenix.LiveView.Socket.html#t:t/0">Phoenix.LiveView.Socket.t</a>()
+) :: {:cont, <a href="https://hexdocs.pm/phoenix_live_view/0.17.7/Phoenix.LiveView.Socket.html#t:t/0">Phoenix.LiveView.Socket.t</a>()}</pre>
+
+      </div>
 
 <p>Assigns custom assigns from the config into the socker under the <code class="inline">:loc</code> key. The
 configuration module is passed as the first argument.</p><p>The assigns can used as <code class="inline">@loc.my_custom_assign</code></p><p>Used in <code class="inline">PhxLocalizedRoutes.create_helper_module/2</code></p><p>See also:</p><ul><li><a href="https://hexdocs.pm/phoenix_live_view/0.17.7/Phoenix.LiveView.html#on_mount/1"><code class="inline">Phoenix.LiveView.on_mount/1</code></a></li></ul>
