--- a/PhxLocalizedRoutes.html
+++ b/PhxLocalizedRoutes.html
@@ -10,7 +10,7 @@
     <title>PhxLocalizedRoutes — Phoenix Localized Routes v0.1.0</title>
     <link rel="stylesheet" href="dist/elixir-b6f1ed5df9b1d42a7309.css" />
 
-    <script src="dist/sidebar_items-27762099be.js"></script>
+    <script src="dist/sidebar_items-48d2b52a43.js"></script>
 
       <script src="docs_config.js"></script>
 
@@ -106,10 +106,9 @@ Phoenix Localized Routes
 
 
   <section id="moduledoc">
-<p>Macro to create and validate <a href="PhxLocalizedRoutes.html#content"><code class="inline">PhxLocalizedRoutes</code></a> configuration module with
-convenience callbacks to fetch specific values. It also creates a LiveHelper
-module to be used in LiveView projects.  For maximum performance, most functions
-return values including additional data computed at compile time.</p>
+<p>Macro to create and validate <a href="PhxLocalizedRoutes.html#content"><code class="inline">PhxLocalizedRoutes</code></a> configuration modules with
+convenience callbacks to fetch specific values. For maximum performance, most
+callbacks return precompiled values with precomputed additional data.</p><p>When used with an app depending on <a href="https://hexdocs.pm/phoenix_live_view/0.17.7/Phoenix.LiveView.html"><code class="inline">Phoenix.LiveView</code></a> it also creates a LiveHelper module.</p><p>For information how to use this lib see the <a href="usage.html">Usage Guide</a></p>
   </section>
 
 
@@ -126,6 +125,14 @@ return values including additional data computed at compile time.</p>
     <h2>
       <a href="#types">Types</a>
     </h2>
+
+      <div class="summary-row">
+        <div class="summary-signature">
+          <a href="#t:config/0" translate="no">config()</a>
+
+        </div>
+
+      </div>
 
       <div class="summary-row">
         <div class="summary-signature">
@@ -217,7 +224,7 @@ with unique combinations when a list of keys is given.</p></div>
 
         </div>
 
-          <div class="summary-synopsis"><p>Return the configuration of given scope helper</p></div>
+          <div class="summary-synopsis"><p>Returns the scope of given scope helper</p></div>
 
       </div>
 
@@ -227,7 +234,7 @@ with unique combinations when a list of keys is given.</p></div>
 
         </div>
 
-          <div class="summary-synopsis"><p>Return the scopes in a flat structure</p></div>
+          <div class="summary-synopsis"><p>Returns the scopes in a flat structure</p></div>
 
       </div>
 
@@ -237,7 +244,7 @@ with unique combinations when a list of keys is given.</p></div>
 
         </div>
 
-          <div class="summary-synopsis"><p>Return the scopes in a nested structure</p></div>
+          <div class="summary-synopsis"><p>Returns the scopes in a nested structure</p></div>
 
       </div>
 
@@ -255,6 +262,34 @@ with unique combinations when a list of keys is given.</p></div>
 Types
     </h1>
     <div class="types-list">
+<section class="detail" id="t:config/0">
+
+  <div class="detail-header">
+    <a href="#t:config/0" class="detail-link" title="Link to this type">
+      <i class="ri-link-m" aria-hidden="true"></i>
+      <span class="sr-only">Link to this type</span>
+    </a>
+    <h1 class="signature" translate="no">config()</h1>
+
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L25" class="view-source" rel="help" title="View Source">
+       <i class="ri-code-s-slash-line" aria-hidden="true"></i>
+       <span class="sr-only">View Source</span>
+     </a>
+
+
+  </div>
+
+  <section class="docstring">
+
+      <div class="specs">
+
+          <pre translate="no"><span class="attribute">@type</span> config() :: <a href="PhxLocalizedRoutes.Config.html#t:t/0">PhxLocalizedRoutes.Config.t</a>()</pre>
+
+      </div>
+
+
+  </section>
+</section>
 <section class="detail" id="t:opts/0">
 
   <div class="detail-header">
@@ -264,7 +299,7 @@ Types
     </a>
     <h1 class="signature" translate="no">opts()</h1>
 
-      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L11" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L14" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -292,7 +327,7 @@ Types
     </a>
     <h1 class="signature" translate="no">opts_scope_map()</h1>
 
-      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L16" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L19" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -305,8 +340,8 @@ Types
       <div class="specs">
 
           <pre translate="no"><span class="attribute">@type</span> opts_scope_map() :: %{
-  assign: %{required(<a href="https://hexdocs.pm/elixir/typespecs.html#basic-types">atom</a>()) =&gt; <a href="https://hexdocs.pm/elixir/typespecs.html#basic-types">any</a>()} | nil,
-  scopes: <a href="#t:opts_scopes/0">opts_scopes</a>() | nil
+  optional(:assign) =&gt; %{required(<a href="https://hexdocs.pm/elixir/typespecs.html#basic-types">atom</a>()) =&gt; <a href="https://hexdocs.pm/elixir/typespecs.html#basic-types">any</a>()},
+  optional(:scopes) =&gt; <a href="#t:opts_scopes/0">opts_scopes</a>()
 }</pre>
 
       </div>
@@ -323,7 +358,7 @@ Types
     </a>
     <h1 class="signature" translate="no">opts_scopes()</h1>
 
-      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L15" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L18" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -351,7 +386,7 @@ Types
     </a>
     <h1 class="signature" translate="no">scope()</h1>
 
-      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L25" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L29" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -379,7 +414,7 @@ Types
     </a>
     <h1 class="signature" translate="no">scope_nested()</h1>
 
-      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L23" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L27" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -407,7 +442,7 @@ Types
     </a>
     <h1 class="signature" translate="no">scopes()</h1>
 
-      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L24" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L28" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -435,7 +470,7 @@ Types
     </a>
     <h1 class="signature" translate="no">scopes_nested()</h1>
 
-      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L22" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L26" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -476,7 +511,7 @@ Callbacks
     </a>
     <h1 class="signature" translate="no">assigned_values(key_or_keys)</h1>
 
-      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L48" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L52" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -493,11 +528,11 @@ Callbacks
       </div>
 
 <p>Return a list of unique values assigned to given key. Returns a list of tuples
-with unique combinations when a list of keys is given.</p><p><strong>Example</strong></p><pre><code class="makeup elixir" translate="no"><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="3258672156-1">(</span><span class="ss">:locale</span><span class="p" data-group-id="3258672156-1">)</span><span class="w">
-</span><span class="p" data-group-id="3258672156-2">[</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl&quot;</span><span class="p" data-group-id="3258672156-2">]</span><span class="w">
+with unique combinations when a list of keys is given.</p><p><strong>Example</strong></p><pre><code class="makeup elixir" translate="no"><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="1983247065-1">(</span><span class="ss">:locale</span><span class="p" data-group-id="1983247065-1">)</span><span class="w">
+</span><span class="p" data-group-id="1983247065-2">[</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl&quot;</span><span class="p" data-group-id="1983247065-2">]</span><span class="w">
 
-</span><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="3258672156-3">(</span><span class="p" data-group-id="3258672156-4">[</span><span class="ss">:locale</span><span class="p">,</span><span class="w"> </span><span class="ss">:locale</span><span class="p" data-group-id="3258672156-4">]</span><span class="p" data-group-id="3258672156-3">)</span><span class="w">
-</span><span class="p" data-group-id="3258672156-5">[</span><span class="p" data-group-id="3258672156-6">{</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;en-GB&quot;</span><span class="p" data-group-id="3258672156-6">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="3258672156-7">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl-NL&quot;</span><span class="p" data-group-id="3258672156-7">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="3258672156-8">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl_BE&quot;</span><span class="p" data-group-id="3258672156-8">}</span><span class="p" data-group-id="3258672156-5">]</span></code></pre>
+</span><span class="gp unselectable">iex&gt; </span><span class="nc">ExampleWeb.LocalizedRoutes</span><span class="o">.</span><span class="n">assigned_values</span><span class="p" data-group-id="1983247065-3">(</span><span class="p" data-group-id="1983247065-4">[</span><span class="ss">:locale</span><span class="p">,</span><span class="w"> </span><span class="ss">:locale</span><span class="p" data-group-id="1983247065-4">]</span><span class="p" data-group-id="1983247065-3">)</span><span class="w">
+</span><span class="p" data-group-id="1983247065-5">[</span><span class="p" data-group-id="1983247065-6">{</span><span class="s">&quot;en&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;en-GB&quot;</span><span class="p" data-group-id="1983247065-6">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="1983247065-7">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl-NL&quot;</span><span class="p" data-group-id="1983247065-7">}</span><span class="p">,</span><span class="w"> </span><span class="p" data-group-id="1983247065-8">{</span><span class="s">&quot;nl&quot;</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;nl_BE&quot;</span><span class="p" data-group-id="1983247065-8">}</span><span class="p" data-group-id="1983247065-5">]</span></code></pre>
   </section>
 </section>
 <section class="detail" id="c:config/0">
@@ -509,7 +544,7 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
     </a>
     <h1 class="signature" translate="no">config()</h1>
 
-      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L51" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L55" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -521,7 +556,7 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
 
       <div class="specs">
 
-          <pre translate="no"><span class="attribute">@callback</span> config() :: <a href="https://hexdocs.pm/elixir/typespecs.html#basic-types">map</a>()</pre>
+          <pre translate="no"><span class="attribute">@callback</span> config() :: <a href="#t:config/0">config</a>()</pre>
 
       </div>
 
@@ -537,7 +572,7 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
     </a>
     <h1 class="signature" translate="no">get_scope(scope_helper)</h1>
 
-      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L35" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L39" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -553,7 +588,7 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
 
       </div>
 
-<p>Return the configuration of given scope helper</p>
+<p>Returns the scope of given scope helper</p>
   </section>
 </section>
 <section class="detail" id="c:scopes/0">
@@ -565,7 +600,7 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
     </a>
     <h1 class="signature" translate="no">scopes()</h1>
 
-      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L29" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L33" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -581,7 +616,7 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
 
       </div>
 
-<p>Return the scopes in a flat structure</p>
+<p>Returns the scopes in a flat structure</p>
   </section>
 </section>
 <section class="detail" id="c:scopes_nested/0">
@@ -593,7 +628,7 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
     </a>
     <h1 class="signature" translate="no">scopes_nested()</h1>
 
-      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L32" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L36" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -609,7 +644,7 @@ with unique combinations when a list of keys is given.</p><p><strong>Example</st
 
       </div>
 
-<p>Return the scopes in a nested structure</p>
+<p>Returns the scopes in a nested structure</p>
   </section>
 </section>
 
